--- a/tetris/index.html
+++ b/tetris/index.html
@@ -12,6 +12,9 @@
             <p>SCORE:<span id="score">0</span></p>
             <p>LINES:<span id="lines">0</span></p>
             <p>LEVEL:<span id="level">1</span></p>
-        </div>               
+        </div>   
+        <a href="https://github.com/LancelotM/Game_tetris/"><b><em>返回当前项目</em></b></a>
+        <br>
+        <a href="https://github.com/LancelotM"><b><em>返回github首页</em></b></a>
     </body>
 </html>
